Add Authenication mechanism

--- a/QuickReads/appsettings.json
+++ b/QuickReads/appsettings.json
@@ -8,5 +8,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "Key": "yV6Xn9RzLz3qG8eWw!sJ@eR7tU2mN4xZqL7#bP8cT0vKfQ9h",
+    "Issuer": "https://localhost:5001",
+    "Audience": "https://localhost:5001",
+    "ExpireTime": 60
+  }
 }
