--- a/QuickReads/appsettings.Development.json
+++ b/QuickReads/appsettings.Development.json
@@ -7,5 +7,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "JwtSettings": {
+    "Key": "yV6Xn9RzLz3qG8eWw!sJ@eR7tU2mN4xZqL7#bP8cT0vKfQ9h",
+    "Issuer": "https://localhost:5001",
+    "Audience": "https://localhost:5001",
+    "ExpireTime": 60
   }
 }
